--- a/index.html
+++ b/index.html
@@ -181,6 +181,56 @@
     </div>
   </section>
   <!-- End About Section -->
+  <div id="skills-page">
+    <section class="skills-section container">
+        <div>
+            <h2 class="section-title">my skills</h2>
+        </div>
+        <div class="section-content skills-section-content">
+            <div class="section-content-left">
+                <img src="img/skills.jpg" alt="image">
+            </div>
+            <div class="section-content-right progress">
+
+                <label>Java</label>
+                <div class="progress-bar">
+                    <div class="bar-percentage java"></div>
+                </div>
+
+                <label>HTML, CSS</label>
+                <div class="progress-bar">
+                    <div class="bar-percentage html"></div>
+                </div>
+
+
+                <label>BOOTSTRAP</label>
+                <div class="progress-bar">
+                    <div class="bar-percentage bootstrap"></div>
+                </div>
+
+
+                <label>JavaScript</label>
+                <div class="progress-bar">
+                    <div class="bar-percentage javascript"></div>
+                </div>
+
+
+                <label>Python</label>
+                <div class="progress-bar">
+                    <div class="bar-percentage python"></div>
+                </div>
+
+
+                <label>C, C++</label>
+                <div class="progress-bar">
+                    <div class="bar-percentage c"></div>
+                </div>
+
+            </div>
+        </div>
+
+    </section>
+</div>
 
   <!-- Contact Section -->
   <section id="contact">
